--- a/pom.xml
+++ b/pom.xml
@@ -149,5 +149,12 @@
             </plugin>
         </plugins>
     </build>
+    
+    <developers>
+       <developer>
+           <name>John Doe</name>
+           <email>jdoe@exemplo.com</email>
+       </developer>
+    </developers>
 
 </project>
